@@ -74,6 +74,7 @@ Bug fixes:
   actor_died_or_disappeared.
 - PVP damage messages are now correctly displayed.
 - Fix display of Clown/Gypsy class name.
+- Warn about broken TCP/IP stack on Windows.
 
 New features:
 - Added XKoreProxy module. Set configuration to 'XKore proxy' to work as
